set(THIS_TARGET_NAME llvmutl)

file(GLOB "${THIS_TARGET_NAME}_HPP" "./include/${THIS_TARGET_NAME}/*.hpp")
file(GLOB "${THIS_TARGET_NAME}_CPP" "./src/*.cpp")

add_library(${THIS_TARGET_NAME}
    "${${THIS_TARGET_NAME}_HPP}"
    "${${THIS_TARGET_NAME}_CPP}"
    )

if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
else()
    include_directories(${LLVM_INCLUDE_DIRS})
endif()

    
set_target_properties(${THIS_TARGET_NAME} PROPERTIES
    DEBUG_OUTPUT_NAME "${THIS_TARGET_NAME}_${CMAKE_SYSTEM_NAME}_Debug"
    RELEASE_OUTPUT_NAME "${THIS_TARGET_NAME}_${CMAKE_SYSTEM_NAME}_Release"
    RELWITHDEBINFO_OUTPUT_NAME "${THIS_TARGET_NAME}_${CMAKE_SYSTEM_NAME}_RelWithDebInfo"
    )

if(DEFINED LIBLLVMUTL_INSTALL_DIR)
    install(TARGETS ${THIS_TARGET_NAME} DESTINATION "${LIBLLVMUTL_INSTALL_DIR}")
endif(DEFINED LIBLLVMUTL_INSTALL_DIR)
